Fix information box text alignment issues, Fix top header

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ body {
 #header-logo-text {
     font-size: 24px;
     color: #F9FAF8;
+    margin-top: 35px;
 }
 
 #header-link-text {
@@ -38,6 +39,7 @@ body {
     display: flex;
     gap: 25px;
     justify-content: flex-end;
+    margin-top: 0px;
 }
 
 ul {
@@ -89,7 +91,9 @@ a {
 }
 
 .second-box {
-    padding: 48px;
+    padding-left: 48px;
+    padding-right: 48px;
+    padding-bottom: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -97,20 +101,41 @@ a {
 
 .icon-container {
     display: flex;
+    gap: 35px;
+    margin-bottom: 60px;
+}
+
+h3 {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: extra-bold;
+    margin-bottom: 30px;
 }
 
 .icon-text {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .image {
-    width: 100px;
-    height: 100px;
-    border-radius: 7px;
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
     border-color: #3882F6;
     border-width: 3px;
     border-style: solid;
+}
+
+.subtext {
+    display: flex;
+    color: #1F2937;
+    width: 150px;
+}
+
+p {
+    margin-top: 8px;
+    text-align: center;
 }
 
 .third-box {
